# crowd-rl

./: dumbtest.py  pyproject.toml  requirements copy.txt  requirements.txt  testagain.py  worsetest.py
crowd-rl/: MANIFEST.in  pyproject.toml
crowd-rl/crowd_rl/: crowd_rl_v0.py
crowd-rl/crowd_rl/environment/: config.py  crowd_rl.py  world.py
crowd_rl/: crowd_rl_v0.py  crowd_v1.py
crowd_rl/env/: actor.py  crowd.py  env.py
crowd_rl/env/location/: location.csv  location.py  tiledata.py
crowd_rl/environment/: config.py  crowd_rl.py
models/MATD3/: MATD3_trained_agent.pt
tests/: a_star.py  performance.py  test.py  test_config.py  test_config_mall.py  test_config_multi_queue.py  test_config_small.py  train_RAYLIB.py  train_SB3.py
train/: AgileRL_MADPPG.py  agile_custom.py  crowd_MATD3.py  crowd_train_DQN.py  crowd_train_MATD3.py  crowd_watch_MATD3.py  mpe_MATD3.py  train_config.py  train_config_old.py
train/models/MATD3/: MATD3_trained_agent.pt
train/old/: crowd_train_PPO.py  mpe_train_MATD3.py
