[project]
name = "crowd-rl"
version = "0.0.1"
authors = [{ name = "Lucas Souza", email = "lucassouzasilva74@gmail.com" }]
license = { text = "MIT License" }
dependencies = [
    "gymnasium",
    "pettingzoo",
    "pygame",
    "pydantic",
    "wheel",
    "stable-baselines3",
    "supersuit",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.package-data]
crowd_rl = ["*.png"] 